# final_project

./: README.md  pyproject.toml
data/clean/: certification.csv  city.csv  country.csv  df_leed_cleaned.csv  df_location_cleaned.csv  energy_consumption.csv  energy_saving_pct.csv  energy_savings.csv  key_impact_metrics.csv  location.csv  lowess_curve_projects.csv  lowess_curve_projects_tableau.csv  projects.csv  state.csv  sustainability_metrics.csv  waste_savings.csv  water_savings.csv
data/raw/: top_leed_certifications_2024-2025.csv
notebooks/: Energy_analysis.ipynb  Filtered_tables_sql.ipynb  Fixing_tables_sql.ipynb  Sustainability_impact_analysis.ipynb  Waste_Analysis.ipynb  Water_analysis.ipynb  data_cleaning_energy_consumption.ipynb  data_cleaning_leed_notebook.ipynb  data_cleaning_sustaintability.ipynb  energy_estimations.ipynb  waste_estimations.ipynb  water_estimations.ipynb
sql/: Global_overview.sql  Global_to_local.mwb  Regions_and_project_types.sql  create_database_final.sql  drawSQL-mysql-export-2025-08-08.sql
tableau/: Global_to_local_project.twb  Sustainability Charts.twb  avg_points_achieved_ by_countries.csv  certification_level_distribution.csv  country_state_city_certlevel.csv  global_overview.csv  projects_by_country.csv  projects_count_by_country_certification level.csv  regional_insights.csv  top_5_countries_by_certified_area.csv
